--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
   <link rel="manifest" href="manifest.json">
   <meta name="mobile-web-app-capable" content="yes">
 
-  <meta name="Description" content="EOS Network Monitor. By CryptoLions.io">
+  <meta name="Description" content="Potato Network Monitor. By PotatoCoin.com">
 
-  <title>EOS Network Monitor - by CryptoLions</title>
+  <title>Potato Network Monitor - by PotatoCoin</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1">
@@ -68,20 +68,20 @@
   <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically includes all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this HTML file. Don't add any assets here! (Check out webpackconfig.js if you want to know more) -->
 
 </body>
-  <script>
+  <!-- <script>
     var HS_PROJECT_ID = "cjoy79ojn1p1a0951fgl0aalz";
   </script>
-  <script src="https://hintsystem.com/injector/m.js"></script>
+  <script src="https://hintsystem.com/injector/m.js"></script> -->
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129190883-6"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129190883-6"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 
 gtag('config', 'UA-129190883-6');
-</script>
+</script> -->
 
 
 </html>
