--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <!-- Make the page mobile compatible -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Allow installing the app to the homescreen -->
-  <link rel="manifest" href="manifest.json">
+  <!-- <link rel="manifest" href="manifest.json"> -->
   <meta name="mobile-web-app-capable" content="yes">
 
   <meta name="Description" content="Potato Network Monitor. By PotatoCoin.com">
@@ -22,6 +22,13 @@
   <meta name="msapplication-TileColor" content="#2d89ef">
   <meta name="theme-color" content="#ffffff">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+  <script src="https://cdn.bootcss.com/Chart.js/2.7.2/Chart.min.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/react/16.4.2/cjs/react.production.min.js"></script> -->
+  <script src="https://cdn.bootcss.com/react/16.4.2/umd/react.production.min.js"></script>
+  <script src="https://cdn.bootcss.com/redux/4.0.0/redux.min.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/react-dom/16.4.2/cjs/react-dom.production.min.js"></script> -->
+  <script src="https://cdn.bootcss.com/react-dom/16.4.2/umd/react-dom.production.min.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/react-select/2.1.0/react-select.min.js"></script> -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-RTPW9RroD90bQg2eJTbzUrvZHbncOLY"></script>
   
   <script>
